--- a/css/pages.css
+++ b/css/pages.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "BMJUA";
-    src: url( './font/BMJUA.ttf') format( 'truetype');
+    src: url( '/font/BMJUA.ttf') format( 'truetype');
 }
 @font-face {
     font-family: "BMHANNA";
-    src: url( './font/BMHANNA.ttf') format( 'truetype');
+    src: url( '/font/BMHANNA.ttf') format( 'truetype');
 }
 *{font-family: 'BMJUA', sans-serif;}
 .ft-bmhanna{font-family: 'BMHANNA', sans-serif;}
